# NL2SQLAgent

./: .gitignore  AGENTS.md  pyproject.toml
.ai/guide/: 00_协作方式.md  01_决策偏好.md  02_风险提醒.md  03_乱码处理.md  04_验证汇报.md  10_运行方式.md
config/: app.yml  env.yml  model.yml  workflow.yml
docs/architecture/: NL2SQL 后续知识层处理方案.md  PROJECT_ARCHITECTURE_GUIDE.md  ProcessedQuestion与KnowledgeLayer协作模式讨论.md  ProcessedQuestion与ProcessedDatabaseKnowledge当前协作说明.md
docs/project/: NL2SQL当前阶段总结与后续路线.md  Phase1_LangGraph运行底座设计.md  Phase3_NL2SQL提示词结构设计.md  Phase4_NL2SQL日志分类设计.md  Phase5_NL2SQL数据契约设计.md  Phase6_NL2SQL不确定性与中间层策略.md  Phase6_NL2SQL中间层对象设计.md  Phase7_NL2SQL_LLM接入设计.md  Phase7_NL2SQL真实运行产物说明.md  Phase8_NL2SQL人工样例验证设计.md  Phase8_NL2SQL真实LLM样例评估设计.md
docs/superpowers/plans/: 2026-05-08-langgraph-runtime-foundation.md  2026-05-08-minimal-runtime-foundation.md  2026-05-09-nl2sql-data-contracts.md  2026-05-09-nl2sql-knowledge-layer-consumption.md  2026-05-09-nl2sql-prompt-payload.md  2026-05-09-nl2sql-run-artifacts.md  2026-05-09-nl2sql-workflow-skeleton.md  2026-05-11-nl2sql-llm-sql-generation.md  (+1 more)
docs/temp/: Phase2_NL2SQL工作流骨架设计.md  Phase4_LangGraph_stream_spike.md  Phase4_NL2SQL运行artifact设计.md  Phase7_LLM接入前置口径统计.md  Phase7_LLM接入实现修复建议.md  其他ai的评价.md  其他ai评价.md  新项目初版基建设计.md  最小运行底座设计.md  计划评价.md  问题.md
examples/nl2sql_cases/: phase8_cases.json
tests/cloud/: README.md  test_nl2sql_llm_generate.py
tests/integration/: test_hello_graph_runtime.py  test_nl2sql_case_cli.py  test_nl2sql_case_runner.py  test_nl2sql_workflow.py  test_startup_cli.py
(+59 files in other folders)
