[project]
name = "nl2sqlagent"
version = "0.1.0"
description = "NL2SQLAgent runtime foundation"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "langgraph>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
