[project]
name = "nl2sqlagent"
version = "0.1.0"
description = "NL2SQLAgent runtime foundation"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "langgraph>=1.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m \"not cloud\""
markers = [
    "cloud: tests that call remote LLM services and consume token",
]
